--- a/assets/css/banner/banner-text.css
+++ b/assets/css/banner/banner-text.css
@@ -9,3 +9,28 @@
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
+@media screen and (min-width: 768px) {
+    .banner__title {
+        font-size: 3rem;
+        margin-bottom: 2rem;
+    }
+    .banner__description {
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+        
+    }
+}
+    
+@media screen and (min-width: 1200px) {
+    .banner__title {
+        font-size: 4rem;
+        margin-bottom: 2.5rem;
+    }
+    .banner__description {
+        font-size: 2.5rem;
+        margin-bottom: 2rem;
+        
+    }
+}
+    
