--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -4,3 +4,12 @@
     justify-content: space-between;
     margin: 1rem 2rem;
 }
+@media screen and (min-width: 1200px) {
+    .header {
+        justify-content: space-around;
+    }
+    .header img {
+        width: 10%;
+    }
+}
+
