--- a/assets/css/productPage.css
+++ b/assets/css/productPage.css
@@ -6,7 +6,6 @@
     height: 50%;
 }
 .product__info {
-
     padding-left: 2rem;
     margin: 2rem 0;
 }
@@ -22,4 +21,31 @@
 .product__description {
     font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        flex-direction: row;
+        padding: 2rem;
+    }
+    .product__image {
+        width: 25rem;
+    }
+    .product__info {
+        padding-left: 1rem;
+        margin: 0;
+    }
+    
+}
+
+@media screen and (min-width: 1200px) {
+     .product__image {
+        width: 50%;
+    }
+    .product__info {
+        align-self: center;
+        padding-left: 2rem;
+        margin: 2rem 0;
+    }
+    
 }
