--- a/assets/css/products/products.css
+++ b/assets/css/products/products.css
@@ -20,3 +20,10 @@
     font-weight: 700;
     letter-spacing: 0.1rem;
 }
+
+@media screen and (min-width:1200px){
+    .products{
+        padding: 5rem;
+    }
+}
+    
